# gaga-pipeline-rebuild-audit

./: .gitignore  ACTIVE_METHOD_REVIEW_PROTOCOL.md  EXTERNAL_BEST_PRACTICES.md  README.md  REFERENCE_GUARDRAILS_FOR_PHASE13.md  UNIFIED_SESSION_QC_VALIDATION_PLAN.md.md  V2_MASTER_PLAN.md  _check_json.py  _col_diff.py  _col_diff2.py  _devset_readiness.py  _find_anchor.py  _nb02_scan.py  _nb02_scan2.py  _nb04_cell5.py  _nb04_cell5_full.py  _nb04_scan.py  _nb06_hampel_full.py  _nb06_hampel_scan.py  _nb08_cell2.py  _nb08_cell5.py  _nb08_scan.py  _t007b_diag.py  _t007b_inspect.py  _t007b_show.py  _t010_magnitude.py  _test_005_006.py  _test_008_adversarial.py  _test_009_adversarial.py  _test_010_adversarial.py  _test_011_adversarial.py  _ticket_003_regen_list.txt  _ticket_003_verify.py  _ticket_004_4session.txt  _ticket_004_smoke.py  _ticket_004_verify.py  _ud006_check.py  _verify_007b.py  _verify_009.py  _verify_011.py  (+8 more)
ref_repo_git/ezc3d-dev/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
ref_repo_git/ezc3d-dev/.github/workflows/: publish_matlab_binaries.yml  publish_to_pypi.yml  run_codecoverage.yml  run_matlab_tests.yml  run_tests.yml
ref_repo_git/ezc3d-dev/binding/: CMakeLists.txt  ezc3d.i
ref_repo_git/ezc3d-dev/binding/csharp/: CMakeLists.txt  ezc3d_csharp.i
ref_repo_git/ezc3d-dev/binding/matlab/: CMakeLists.txt
ref_repo_git/ezc3d-dev/binding/python3/: __init__.py  ezc3d_python.i
ref_repo_git/ezc3d-dev/examples/: force_plate_example.cpp  modify_c3d_example.cpp
ref_repo_git/ezc3d-dev/examples/csharp/: CMakeLists.txt  Ezc3dExample.cs
ref_repo_git/ezc3d-dev/include/ezc3d/: Analogs.h  AnalogsInfo.h  AnalogsSubframe.h  Channel.h  Data.h  DataStartInfo.h  Frame.h  Group.h  Header.h  Options.h  Parameter.h  Parameters.h  Point.h  Points.h  PointsInfo.h  Rotation.h  Rotations.h  RotationsInfo.h  RotationsSubframe.h  WriteOptions.h  ezc3d.h  (+2 more)
ref_repo_git/ezc3d-dev/src/: Analogs.cpp  AnalogsInfo.cpp  AnalogsSubframe.cpp  Channel.cpp  Data.cpp  Frame.cpp  Group.cpp  Header.cpp  Parameter.cpp  Parameters.cpp  Point.cpp  Points.cpp  PointsInfo.cpp  Rotation.cpp  Rotations.cpp  RotationsSubframe.cpp  ezc3d.cpp
ref_repo_git/ezc3d-dev/test/: common_utils.h  test_ezc3d.cpp  test_math.cpp  test_modules.cpp
(+489 files in other folders)
