[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja",
    "swig",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "ezc3d"
dynamic = ["version"]
dependencies = [
    "numpy",
]
description = "Easy to use C3D reader/writer for C++, Python, and Matlab"
readme = "README.md"  # This links to your README file
authors = [
    {name = "Michaud, Benjamin"},
    {name = "Begon, Mickaël"}
]
license-files = ["LICENSE"]
urls = { "Homepage" = "https://github.com/pyomeca/ezc3d" }
requires-python = ">=3.10"

[tool.cibuildwheel]
build-frontend = "build"
